--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>AMATECH GLOBAL BUILDERS LTD</title>
+</head>
+<body style="font-family: Arial; text-align: center;">
 
+    <h1>Welcome to AMATECH GLOBAL BUILDERS LTD</h1>
+    <p>Your trusted building and construction partner.</p>
+
+    <h2>Our Services</h2>
+    <p>Building Construction</p>
+    <p>Renovation</p>
+    <p>Project Management</p>
+
+    <h3>Contact Us</h3>
+    <p>Email: amatech@email.com</p>
+    <p>Phone: +234XXXXXXXXXX</p>
+
+</body>
+</html>
