--- a/index.html
+++ b/index.html
@@ -2,20 +2,83 @@
 <html>
 <head>
     <title>AMATECH GLOBAL BUILDERS LTD</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            background-color: #f4f4f4;
+        }
+
+        header {
+            background-color: #1e3d59;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+
+        section {
+            padding: 40px;
+            text-align: center;
+        }
+
+        .services {
+            background-color: white;
+        }
+
+        .services h2 {
+            color: #1e3d59;
+        }
+
+        .service-box {
+            margin: 15px;
+            padding: 15px;
+            border-radius: 8px;
+            background-color: #e8eef1;
+        }
+
+        .contact {
+            background-color: #1e3d59;
+            color: white;
+        }
+
+        .btn {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #ff6e40;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            margin-top: 15px;
+        }
+    </style>
 </head>
-<body style="font-family: Arial; text-align: center;">
 
-    <h1>Welcome to AMATECH GLOBAL BUILDERS LTD</h1>
-    <p>Your trusted building and construction partner.</p>
+<body>
 
+<header>
+    <h1>AMATECH GLOBAL BUILDERS LTD</h1>
+    <p>Your Trusted Building & Construction Partner</p>
+</header>
+
+<section>
+    <h2>About Us</h2>
+    <p>We provide professional building construction, renovation, and project management services across Nigeria.</p>
+</section>
+
+<section class="services">
     <h2>Our Services</h2>
-    <p>Building Construction</p>
-    <p>Renovation</p>
-    <p>Project Management</p>
 
-    <h3>Contact Us</h3>
+    <div class="service-box">🏗 Building Construction</div>
+    <div class="service-box">🔨 Renovation</div>
+    <div class="service-box">📊 Project Management</div>
+</section>
+
+<section class="contact">
+    <h2>Contact Us</h2>
     <p>Email: amatech@email.com</p>
     <p>Phone: +234XXXXXXXXXX</p>
+    <a href="#" class="btn">Get a Quote</a>
+</section>
 
 </body>
 </html>
