--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <section class="contact">
     <h2>Contact Us</h2>
     <p>Email: amatech@email.com</p>
-    <p>Phone: +234XXXXXXXXXX</p>
+    <a href="https://wa.me/2348012345678" class="btn">Chat on WhatsApp</a>
     <a href="#" class="btn">Get a Quote</a>
 </section>
 
