--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 <section class="contact">
     <h2>Contact Us</h2>
-    <p>Email: amatech@email.com</p>
+    <p>Email: amatechbuilders@gmail.com</p>
     <a href="https://wa.me/234805931872" class="btn">Chat on WhatsApp</a>
     <a href="#" class="btn">Get a Quote</a>
 </section>
