--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+my<!DOCTYPE html>
 <html>
 <head>
     <title>AMATECH GLOBAL BUILDERS LTD</title>
@@ -76,7 +76,7 @@
 <section class="contact">
     <h2>Contact Us</h2>
     <p>Email: amatechbuilders@gmail.com</p>
-    <a href="https://wa.me/234805931872" class="btn">Chat on WhatsApp</a>
+    <a href="https://wa.me/234815931872" class="btn">Chat on WhatsApp</a>
     <a href="#" class="btn">Get a Quote</a>
 </section>
 
