--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ my<!DOCTYPE html>
 <body>
 
 <header>
-    <h1>AMATECH GLOBAL BUILDERS LTD</h1>
+    <h1>AMATECH GLOBAL BUILDERS LTD</h1><img src="profile.jpg" alt="Company Picture" width="200">
     <p>Your Trusted Building & Construction Partner</p>
 </header>
 
