--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@ my<!DOCTYPE html>
 <body>
 
 <header>
-    <h1>AMATECH GLOBAL BUILDERS LTD</h1><img src="profile.jpg" alt="Company Picture" width="200">
+    <h1>AMATECH GLOBAL BUILDERS LTD</h1><img src="profile.jpg" alt="Company Picture" width="200"><h3>Engr. Mukaila Hammed Abiodun</h3>
+<p>Managing Director / CEO</p>
     <p>Your Trusted Building & Construction Partner</p>
 </header>
 
