Enhance index.html with title and meta tags
Updated the title and added meta tags for description, keywords, and author.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 my<!DOCTYPE html>
 <html>
 <head>
-    <title>AMATECH GLOBAL BUILDERS LTD</title>
+    <title>AMATECH GLOBAL BUILDERS LIMITED | Building Construction Company in Yaba, Lagos</title>
+
+    <meta name="description" content="AMATECH GLOBAL BUILDERS LIMITED is a professional building construction, renovation, block laying, plastering, artwork and site engineering company located in Yaba, Lagos, Nigeria.">
+
+    <meta name="keywords" content="Building Construction Lagos, Renovation Company Yaba, Block Laying Nigeria, Site Engineering Lagos, AMATECH GLOBAL BUILDERS LIMITED">
+
+    <meta name="author" content="Engr. Mukaila Hammed Abiodun">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
             font-family: Arial, sans-serif;
