--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ my<!DOCTYPE html>
     <meta name="author" content="Engr. Mukaila Hammed Abiodun">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-site-verification" content="abc123XYZ456" />
+<meta name="google-site-verification" content="fdXTfhEXQ-Nq67TuAk3wyArmA9HBnkm73hQLmvkMLIg" />
     <style>
         body {
             font-family: Arial, sans-serif;
