Add canonical link to index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@ my<!DOCTYPE html>
 <html>
 <head>
     <title>AMATECH GLOBAL BUILDERS LIMITED | Building Construction Company in Yaba, Lagos</title>
-
+     <link rel="canonical" href="https://amatechbuilders-lab.github.io/amatech-w..." />
     <meta name="description" content="AMATECH GLOBAL BUILDERS LIMITED is a professional building construction, renovation, block laying, plastering, artwork and site engineering company located in Yaba, Lagos, Nigeria.">
 
     <meta name="keywords" content="Building Construction Lagos, Renovation Company Yaba, Block Laying Nigeria, Site Engineering Lagos, AMATECH GLOBAL BUILDERS LIMITED">
