Rearrange header content and update image source

--- a/index.html
+++ b/index.html
@@ -62,12 +62,19 @@ my<!DOCTYPE html>
     </style>
 </head>
 
-<body>
 
-<header>
-    <h1>AMATECH GLOBAL BUILDERS LTD</h1><img src="profile.jpg" alt="Company Picture" width="200"><h3>Engr. Mukaila Hammed Abiodun</h3>
-<p>Managing Director / CEO</p>
+
+<body>
+<header style="text-align: center;">
+
+    <img src="IMG_0518.jpeg" alt="Amatech Logo" width="180">
+
+    <h1>AMATECH GLOBAL BUILDERS LTD</h1>
+    <img src="profile.jpg" alt="Company Picture" width="200"><h3>Engr. Mukaila Hammed Abiodun</h3>
+    <p>Managing Director / CEO</p>
+
     <p>Your Trusted Building & Construction Partner</p>
+
 </header>
 
 <section>
