Set background image and change logo in index.html
Added a background image to the body and updated the logo image.

--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@ my<!DOCTYPE html>
             background-color: #1e3d59;
             color: white;
         }
+         body {
+    background-image: url("Background.jpeg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
 
         .btn {
             display: inline-block;
@@ -58,16 +64,15 @@ my<!DOCTYPE html>
             text-decoration: none;
             border-radius: 5px;
             margin-top: 15px;
+    
         }
     </style>
 </head>
-
-
-
+    
 <body>
 <header style="text-align: center;">
 
-    <img src="IMG_0518.jpeg" alt="Amatech Logo" width="180">
+    <img src="Logo.jpeg" alt="Amatech Logo" width="180">
 
     <h1>AMATECH GLOBAL BUILDERS LTD</h1>
     <img src="profile.jpg" alt="Company Picture" width="200"><h3>Engr. Mukaila Hammed Abiodun</h3>
