--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@ my<!DOCTYPE html>
 </head>
     
 <body>
-<header style="text-align: center;">
+<header class="hero">
+    <div class="hero-content">
+        <img src="Logo.jpeg" alt="Amatech Logo" class="hero-logo">
 
-    <img src="Logo.jpeg" alt="Amatech Logo" width="180">
+        <h1>AMATECH GLOBAL BUILDERS LTD</h1>
+        <p>Building Excellence Across Nigeria</p>
 
-    <h1>AMATECH GLOBAL BUILDERS LTD</h1>
-    <img src="profile.jpg" alt="Company Picture" width="200"><h3>Engr. Mukaila Hammed Abiodun</h3>
-    <p>Managing Director / CEO</p>
-
-    <p>Your Trusted Building & Construction Partner</p>
-
+        <a href="#contact" class="btn">Request a Quote</a>
+    </div>
 </header>
+
 
 <section>
     <h2>About Us</h2>
