--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@ my<!DOCTYPE html>
         <img src="Logo.jpeg" alt="Amatech Logo" class="hero-logo">
 
         <h1>AMATECH GLOBAL BUILDERS LTD</h1>
+        <img src="profile.jpg" alt="Managing Director" class="hero-photo">
+        <h3 class="ceo-name">Engr. Mukaila Hamed</h3>
         <p>Building Excellence Across Nigeria</p>
 
         <a href="#contact" class="btn">Request a Quote</a>
