--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@ my<!DOCTYPE html>
             margin-top: 15px;
     
         }
+        .hero-photo {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin: 15px 0;
+}
     </style>
 </head>
     
