--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@ my<!DOCTYPE html>
     object-fit: cover;
     margin: 15px 0;
 }
+        .hero-logo {
+    width: 90px;   /* smaller logo */
+    height: auto;
+    margin-bottom: 10px;
+}
     </style>
 </head>
     
@@ -74,7 +79,7 @@ my<!DOCTYPE html>
 <header class="hero">
     <div class="hero-content">
         <img src="Logo.jpeg" alt="Amatech Logo" class="hero-logo">
-
+        
         <h1>AMATECH GLOBAL BUILDERS LTD</h1>
         <img src="profile.jpg" alt="Managing Director" class="hero-photo">
         <h3 class="ceo-name">Engr. Mukaila Hamed</h3>
