Add Director and CEO section to index.html
Added a new section for the Director and CEO, Mukaila Hamed, including a brief description of his role and commitment.

--- a/index.html
+++ b/index.html
@@ -94,7 +94,15 @@ my<!DOCTYPE html>
     <h2>About Us</h2>
     <p>We provide professional building construction, renovation, and project management services across Nigeria.</p>
 </section>
-
+<section style="padding:40px; text-align:center; background-color:#f4f4f4;">
+    <h2>Director & Chief Executive Officer</h2>
+    <h3>Mukaila Hamed</h3>
+    <p>
+        Mukaila Hamed is the Director and Chief Executive Officer of Amatech Global Builders Limited. 
+        He leads the company with a commitment to excellence, integrity, and quality service delivery 
+        in construction and project management.
+    </p>
+</section>
 <section class="services">
     <h2>Our Services</h2>
 
