Update CEO section in index.html
Added title and CEO designation for Mukaila Hamed.

--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@ my<!DOCTYPE html>
         <h1>AMATECH GLOBAL BUILDERS LTD</h1>
         <img src="profile.jpg" alt="Managing Director" class="hero-photo">
         <h3 class="ceo-name">Engr. Mukaila Hamed</h3>
+        <h4 style="margin:8px 0 15px 0; font-weight:500; letter-spacing:1px;">
+                 Director & Chief Executive Officer
+        </h4>
         <p>Building Excellence Across Nigeria</p>
 
         <a href="#contact" class="btn">Request a Quote</a>
@@ -94,15 +97,7 @@ my<!DOCTYPE html>
     <h2>About Us</h2>
     <p>We provide professional building construction, renovation, and project management services across Nigeria.</p>
 </section>
-<section style="padding:40px; text-align:center; background-color:#f4f4f4;">
-    <h2>Director & Chief Executive Officer</h2>
-    <h3>Mukaila Hamed</h3>
-    <p>
-        Mukaila Hamed is the Director and Chief Executive Officer of Amatech Global Builders Limited. 
-        He leads the company with a commitment to excellence, integrity, and quality service delivery 
-        in construction and project management.
-    </p>
-</section>
+
 <section class="services">
     <h2>Our Services</h2>
 
