Add recent projects section to index.html
Added a new section for recent projects with images.

--- a/index.html
+++ b/index.html
@@ -105,7 +105,17 @@ my<!DOCTYPE html>
     <div class="service-box">🔨 Renovation</div>
     <div class="service-box">📊 Project Management</div>
 </section>
+<section style="padding:40px; text-align:center;">
+    <h2>Our Recent Projects</h2>
 
+    <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:20px; margin-top:20px;">
+
+        <img src="project1.jpg" style="width:300px; border-radius:8px;">
+        <img src="project2.jpg" style="width:300px; border-radius:8px;">
+        <img src="project3.jpg" style="width:300px; border-radius:8px;">
+
+    </div>
+</section>
 <section class="contact">
     <h2>Contact Us</h2>
     <p>Email: amatechbuilders@gmail.com</p>
