Add images for recent projects in index.html
Added new project images to the recent projects section.

--- a/index.html
+++ b/index.html
@@ -109,10 +109,12 @@ my<!DOCTYPE html>
     <h2>Our Recent Projects</h2>
 
     <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:20px; margin-top:20px;">
-
-        <img src="project1.jpg" style="width:300px; border-radius:8px;">
-        <img src="project2.jpg" style="width:300px; border-radius:8px;">
-        <img src="project3.jpg" style="width:300px; border-radius:8px;">
+     <img src="Project1.jpg" alt="Project 1">
+     <img src="Project2.jpg" alt="Project 2">
+     <img src="Project3.jpg" alt="Project 3">
+     <img src="Project4.jpg" alt="Project 4">
+     <img src="Project5.jpg" alt="Project 5">
+        
 
     </div>
 </section>
