Add responsive styles for section images

--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@ my<!DOCTYPE html>
     height: auto;
     margin-bottom: 10px;
 }
+ section img {
+    max-width: 100%;
+    height: auto;
+}
     </style>
 </head>
     
