Change background colors in index.html

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@ my<!DOCTYPE html>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
-            background-color: #f4f4f4;
+            background-color: #111111;
         }
 
         header {
-            background-color: #1e3d59;
+            background-color: #000000;
             color: white;
             padding: 20px;
             text-align: center;
@@ -31,11 +31,11 @@ my<!DOCTYPE html>
         }
 
         .services {
-            background-color: white;
+            background-color: #1c1c1c;
         }
 
         .services h2 {
-            color: #1e3d59;
+            color: #f4b400;
         }
 
         .service-box {
