Change paragraph color to white in services section

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@ my<!DOCTYPE html>
         .services h2 {
             color: #f4b400;
         }
+           section p {
+                 color: #ffffff;
 
         .service-box {
             margin: 15px;
