--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@ my<!DOCTYPE html>
         }
 
         section {
-            padding: 40px;
-            text-align: center;
+             padding: 40px 20px;
+    text-align: center;
+    background-color: #1c1c1c;
+    margin: 20px;
+    border-radius: 10px;
+
         }
 
         .services {
