Add CEO image styling and update profile image class

--- a/index.html
+++ b/index.html
@@ -82,6 +82,14 @@ my<!DOCTYPE html>
     max-width: 100%;
     height: auto;
 }
+               .ceo-img {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin: 15px 0;
+    border: 4px solid #f4b400;
+}
     </style>
 </head>
     
@@ -91,7 +99,7 @@ my<!DOCTYPE html>
         <img src="Logo.jpeg" alt="Amatech Logo" class="hero-logo">
         
         <h1>AMATECH GLOBAL BUILDERS LTD</h1>
-        <img src="profile.jpg" alt="Managing Director" class="hero-photo">
+        <img src="profile.jpg" alt="Managing Director" class="ceo-img"> 
         <h3 class="ceo-name">Engr. Mukaila Hamed</h3>
         <h4 style="margin:8px 0 15px 0; font-weight:500; letter-spacing:1px;">
                  Director & Chief Executive Officer
