Enhance hero section styles in index.html

--- a/index.html
+++ b/index.html
@@ -64,14 +64,25 @@ my<!DOCTYPE html>
             text-decoration: none;
             border-radius: 5px;
             margin-top: 15px;
-    
+    .hero {
+    text-align: center;
+    padding: 40px 20px;
+    background-color: #000;
+}
+
+.hero-content {
+    max-width: 800px;
+    margin: auto;
+}
         }
         .hero-photo {
-    width: 150px;
-    height: 150px;
+    width: 150px !important;
+    height: 150px !important;
     border-radius: 50%;
     object-fit: cover;
-    margin: 15px 0;
+    display: block;
+    margin: 20px auto;
+}
 }
         .hero-logo {
     width: 90px;   /* smaller logo */
