Refactor hero styles and update photo size
Adjusted hero section styles and updated hero photo dimensions.

--- a/index.html
+++ b/index.html
@@ -64,26 +64,25 @@ my<!DOCTYPE html>
             text-decoration: none;
             border-radius: 5px;
             margin-top: 15px;
-    .hero {
+  .hero {
     text-align: center;
     padding: 15px 20px;
     background-color: #000;
+    min-height: auto;
 }
-
 .hero-content {
     max-width: 350px;
     margin: auto;
 }
         }
-        .hero-photo {
-    width: 150px !important;
-    height: 150px !important;
+        .
+.hero-photo {
+    width: 120px !important;
+    height: 120px !important;
     border-radius: 50%;
     object-fit: cover;
     display: block;
-    margin: 20px auto;
-}
-}
+    margin: 15px auto;
         .hero-logo {
     width: 90px;   /* smaller logo */
     height: auto;
