Fix indentation for .hero-logo class in index.html

--- a/index.html
+++ b/index.html
@@ -83,8 +83,10 @@ my<!DOCTYPE html>
     object-fit: cover;
     display: block;
     margin: 15px auto;
-        .hero-logo {
-    width: 90px;   /* smaller logo */
+}
+
+.hero-logo {
+    width: 90px;
     height: auto;
     margin-bottom: 10px;
 }
