--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@ my<!DOCTYPE html>
         .
 .hero-photo {
     width: 120px !important;
+    max-width: 120px !important;
     height: 120px !important;
     border-radius: 50%;
     object-fit: cover;
