--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ my<!DOCTYPE html>
         <img src="Logo.jpeg" alt="Amatech Logo" class="hero-logo">
         
         <h1>AMATECH GLOBAL BUILDERS LTD</h1>
-        <img src="profile.jpg" alt="Managing Director" class="hero-photo">
+        <img src="profile.jpg" alt="Managing Director" class="hero-photo" style="width:120px;height:120px;border-radius:50%;">
         <h3 class="ceo-name">Engr. Mukaila Hamed</h3>
         <h4 style="margin:8px 0 15px 0; font-weight:500; letter-spacing:1px;">
                  Director & Chief Executive Officer
