--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@ my<!DOCTYPE html>
         }
            section p {
                  color: #ffffff;
+                 font-size: 26px;
+                 margin-bottom: 15px;
+                  margin-bottom: 15px;
+             }
 
         .service-box {
             margin: 15px;
