--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@ my<!DOCTYPE html>
         }
 
         section {
-             padding: 40px 20px;
-    text-align: center;
-    background-color: #1c1c1c;
-    margin: 20px;
-    border-radius: 10px;
-
+          padding: 40px 20px;
+          text-align: center;
+          background-color: #1c1c1c;
+          margin: 20px;
+          border-radius: 10px;
+          color: #ffffff;
         }
 
         .services {
