--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@ my<!DOCTYPE html>
             margin: 15px;
             padding: 15px;
             border-radius: 8px;
-            background-color: #e8eef1;
+            background-color: #2a2a2a;
+            color: white;
+            font-weight: bold;
         }
 
         .contact {
