Add company registration details to index.html

--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@ my<!DOCTYPE html>
                  Director & Chief Executive Officer
         </h4>
         <p>Building Excellence Across Nigeria</p>
-
+        <p>A Company Registration Under Federal government Cac</p>
+        <p>Register No 9338393</p>
         <a href="#contact" class="btn">Request a Quote</a>
     </div>
 </header>
