Update company registration details and add contact number

--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@ my<!DOCTYPE html>
                  Director & Chief Executive Officer
         </h4>
         <p>Building Excellence Across Nigeria</p>
-        <p>A Company Registration Under Federal government Cac</p>
-        <p>Register No 9338393</p>
+    
+        <p>Company Registration No.9338393</p>
         <a href="#contact" class="btn">Request a Quote</a>
     </div>
 </header>
@@ -135,6 +135,7 @@ my<!DOCTYPE html>
     <div class="service-box">🏗 Building Construction</div>
     <div class="service-box">🔨 Renovation</div>
     <div class="service-box">📊 Project Management</div>
+    <div class="service-box">🦺 Maintenance</div>
 </section>
 <section style="padding:40px; text-align:center;">
     <h2>Our Recent Projects</h2>
@@ -153,6 +154,7 @@ my<!DOCTYPE html>
     <h2>Contact Us</h2>
     <p>Email: amatechbuilders@gmail.com</p>
     <a href="https://wa.me/234815931872" class="btn">Chat on WhatsApp</a>
+    <p>Contact Number: 08105931872</p>
     <a href="#" class="btn">Get a Quote</a>
 </section>
 
