Update CEO title in index.html

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ my<!DOCTYPE html>
         <img src="profile.jpg" alt="Managing Director" class="hero-photo" style="width:120px;height:120px;border-radius:50%;">
         <h3 class="ceo-name">Engr. Mukaila Hamed</h3>
         <h4 style="margin:8px 0 15px 0; font-weight:500; letter-spacing:1px;">
-                 Director & Chief Executive Officer
+                 Director & CEO
         </h4>
         <p>Building Excellence Across Nigeria</p>
     
