--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ my<!DOCTYPE html>
 
 <section>
     <h2>About Us</h2>
-    <p>We provide professional building construction, renovation, and project management services across Nigeria.</p>
+    <p>AMATECH GLOBAL BUILDERS LIMITED is a professional construction company specializing in residential and commercial projects. We deliver quality, safety, and excellence in every build.</p>
 </section>
 
 <section class="services">
