--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ my<!DOCTYPE html>
 <head>
     <title>AMATECH GLOBAL BUILDERS LIMITED | Building Construction Company in Yaba, Lagos</title>
     <link rel="canonical" href="https://amatechbuilders-lab.github.io/amatech-website/" />
-    <meta name="description" content="AMATECH GLOBAL BUILDERS LIMITED is a professional building construction, renovation, block laying, plastering, artwork and site engineering company located in Yaba, Lagos, Nigeria.">
+    <meta name="description" content="AMATECH Global Builders Limited is a trusted construction company in Lagos, Nigeria specializing in commercial and residential building projects. Contact us for quality and reliable construction services.">
 
     <meta name="keywords" content="Building Construction Lagos, Renovation Company Yaba, Block Laying Nigeria, Site Engineering Lagos, AMATECH GLOBAL BUILDERS LIMITED">
 
