--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@ my<!DOCTYPE html>
 <html>
 <head>
     <title>AMATECH GLOBAL BUILDERS LIMITED | Building Construction Company in Yaba, Lagos</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
     <link rel="canonical" href="https://amatechbuilders-lab.github.io/amatech-website/" />
     <meta name="description" content="AMATECH Global Builders Limited is a trusted construction company in Lagos, Nigeria specializing in commercial and residential building projects. Contact us for quality and reliable construction services.">
 
@@ -13,13 +14,13 @@ my<!DOCTYPE html>
     <meta name="google-site-verification" content="gfe730e770abc123xyz456" />
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Poppins', sans-serif;
             margin: 0;
-            background-color: #111111;
+            background-color: #F4F4F4;
         }
 
         header {
-            background-color: #000000;
+            background-color: #0A1F44;
             color: white;
             padding: 20px;
             text-align: center;
