--- a/index.html
+++ b/index.html
@@ -65,12 +65,20 @@ my<!DOCTYPE html>
 
         .btn {
             display: inline-block;
-            padding: 10px 20px;
-            background-color: #ff6e40;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-            margin-top: 15px;
+    padding: 12px 25px;
+    background-color: #0A1F44;
+    color: white;
+    text-decoration: none;
+    border-radius: 30px;
+    font-weight: 600;
+    margin-top: 20px;
+    transition: 0.3s ease;
+}
+
+.btn:hover {
+    background-color: #ff6e40;
+}
+        
   .hero {
     text-align: center;
     padding: 15px 20px;
@@ -84,9 +92,9 @@ my<!DOCTYPE html>
         }
         .
 .hero-photo {
-    width: 120px !important;
-    max-width: 120px !important;
-    height: 120px !important;
+    width: 180px !important;
+    max-width: 180px !important;
+    height: 180px !important;
     border-radius: 50%;
     object-fit: cover;
     display: block;
