--- a/index.html
+++ b/index.html
@@ -65,14 +65,15 @@ my<!DOCTYPE html>
 
         .btn {
             display: inline-block;
-    padding: 12px 25px;
-    background-color: #0A1F44;
-    color: white;
-    text-decoration: none;
-    border-radius: 30px;
-    font-weight: 600;
-    margin-top: 20px;
-    transition: 0.3s ease;
+            padding: 12px 25px;
+            background-color: #0A1F44;
+            color: white;
+            text-decoration: none;
+            border-radius: 30px;
+            font-weight: 600;
+            margin-top: 20px;
+            transition: 0.3s ease;
+            
 }
 
 .btn:hover {
@@ -83,7 +84,7 @@ my<!DOCTYPE html>
   .hero {
     text-align: center;
     padding: 15px 20px;
-    background-color: #000;
+    background: linear-gradient(to right, #0A1F44, #000);
     min-height: auto;
 }
 .hero-content {
