--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@ my<!DOCTYPE html>
     object-fit: cover;
     display: block;
     margin: 15px auto;
+    border: 4px solid white;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.5);
 }
 
 .hero-logo {
