--- a/index.html
+++ b/index.html
@@ -164,7 +164,42 @@ my<!DOCTYPE html>
     .services .service-box {
         width: 40%;
     }
-}     
+}
+        /* Projects Section */
+.projects {
+    padding: 60px 20px;
+    text-align: center;
+    background: #ffffff;
+}
+
+.projects h2 {
+    margin-bottom: 30px;
+    font-size: 28px;
+    color: #0A1F44;
+}
+
+.project-grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px;
+}
+
+.project-grid img {
+    width: 100%;
+    border-radius: 12px;
+    transition: 0.3s ease;
+}
+
+.project-grid img:hover {
+    transform: scale(1.05);
+}
+
+/* Desktop */
+@media (min-width: 768px) {
+    .project-grid {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
     </style>
 </head>
     
@@ -200,10 +235,10 @@ my<!DOCTYPE html>
     <div class="service-box">📊 Project Management</div>
     <div class="service-box">🦺 Maintenance</div>
 </section>
-<section style="padding:40px; text-align:center;">
+<section class="projects">
     <h2>Our Recent Projects</h2>
 
-    <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:20px; margin-top:20px;">
+    <div class="project-grid">
      <img src="Project1.jpg" alt="Project 1">
      <img src="Project2.jpg" alt="Project 2">
      <img src="Project3.jpg" alt="Project 3">
