--- a/index.html
+++ b/index.html
@@ -50,13 +50,14 @@ my<!DOCTYPE html>
              }
 
         .service-box {
-            margin: 15px;
-            padding: 15px;
-            border-radius: 8px;
-            background-color: #2a2a2a;
-            color: white;
-            font-weight: bold;
-        }
+            background: white;
+    padding: 25px;
+    margin: 15px;
+    border-radius: 12px;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.08);
+    font-weight: 600;
+    transition: 0.3s ease;  
+} 
 
         .contact {
             background-color: #1e3d59;
