--- a/index.html
+++ b/index.html
@@ -38,16 +38,15 @@ my<!DOCTYPE html>
         .services {
             background-color: #1c1c1c;
         }
-
+   .hero p {
+    color: #ffffff;
+    font-size: 26px;
+    margin-bottom: 15px;
+}
         .services h2 {
             color: #f4b400;
         }
-           section p {
-                 color: #ffffff;
-                 font-size: 26px;
-                 margin-bottom: 15px;
-                  margin-bottom: 15px;
-             }
+    
 
         .service-box {
             background: white;
