--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@ my<!DOCTYPE html>
     font-weight: 600;
     transition: 0.3s ease;  
 } 
-
+.service-box p {
+    color: #333;
+}
         .contact {
             background-color: #1e3d59;
             color: white;
