--- a/index.html
+++ b/index.html
@@ -228,28 +228,41 @@ my<!DOCTYPE html>
     <h2>About Us</h2>
     <p>AMATECH GLOBAL BUILDERS LIMITED is a professional construction company specializing in residential and commercial projects. We deliver quality, safety, and excellence in every build.</p>
 </section>
-
 <section class="services">
     <h2>Our Services</h2>
 
-    <div class="service-box">🏗 Building Construction</div>
-    <div class="service-box">🔨 Renovation</div>
-    <div class="service-box">📊 Project Management</div>
-    <div class="service-box">🦺 Maintenance</div>
+    <div class="service-box">
+        <h3>🏗 Building Construction</h3>
+        <p>We deliver high-quality residential and commercial construction projects across Nigeria.</p>
+    </div>
+
+    <div class="service-box">
+        <h3>🔨 Renovation</h3>
+        <p>Professional renovation and remodeling services tailored to modern standards.</p>
+    </div>
+
+    <div class="service-box">
+        <h3>📊 Project Management</h3>
+        <p>Efficient planning, supervision and execution to ensure timely delivery.</p>
+    </div>
+
+    <div class="service-box">
+        <h3>🦺 Maintenance</h3>
+        <p>Reliable building maintenance services to keep your property in top condition.</p>
+    </div>
 </section>
+
 <section class="projects">
     <h2>Our Recent Projects</h2>
 
     <div class="project-grid">
-     <img src="Project1.jpg" alt="Project 1">
-     <img src="Project2.jpg" alt="Project 2">
-     <img src="Project3.jpg" alt="Project 3">
-     <img src="Project4.jpg" alt="Project 4">
-     <img src="Project5.jpg" alt="Project 5">
-        
-
+        <img src="Project1.jpg" alt="Project 1">
+        <img src="Project2.jpg" alt="Project 2">
+        <img src="Project3.jpg" alt="Project 3">
+        <img src="Project4.jpg" alt="Project 4">
     </div>
 </section>
+
 <section class="contact">
     <h2>Contact Us</h2>
     <p>Email: amatechbuilders@gmail.com</p>
